syntax = "proto3";

package order;

import "google/protobuf/timestamp.proto";
import "user/user.proto";

message Order {
  string id = 1;
  string user_id = 2;
  repeated string product_ids = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
}

message CreateOrderRequest {
  string user_id = 1;
  repeated string product_ids = 2;
}

message CreateOrderResponse {
  Order order = 1;
}

message GetOrderRequest {
  string id = 1;
}

message GetOrderResponse {
  Order order = 1;
}

message UpdateOrderRequest {
  Order order = 1;
}

message UpdateOrderResponse {
  Order order = 1;
}

message DeleteOrderRequest {
  string id = 1;
}

message DeleteOrderResponse {
  Order order = 1;
}

message ListOrdersRequest {
  string user_id = 1;
}

message ListOrdersResponse {
  repeated Order orders = 1;
}
